# ModernOpenGLWin32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_shaders.bat  main.c
glsl/: triangle_shader.frag  triangle_shader.vert
include/: shader.h
